force-app/main/default/objects/ContactCenter_Handler__c/ContactCenter_Handler__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Contact Center Popup (cc_page.page)</description>
    <label>ContactCenter_Handler</label>
</CustomObject>