force-app/main/default/objects/ContactCenter_Handler__c/fields/ObjectOperation__c.field-meta.xml
<CustomField>
    <fullName>ObjectOperation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjectOperation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>