force-app/main/default/objects/ContactCenter_Handler__c/fields/ObjectRedirect__c.field-meta.xml
<CustomField>
    <fullName>ObjectRedirect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjectRedirect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>