force-app/main/default/objects/ContactCenter_Handler__c/fields/PhoneSearchField__c.field-meta.xml
<CustomField>
    <fullName>PhoneSearchField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PhoneSearchField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>