force-app/main/default/objects/ContactCenter_Handler__c/fields/ResultField__c.field-meta.xml
<CustomField>
    <fullName>ResultField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ResultField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>